[package]
name = "raytracer"
version = "0.1.0"
authors = ["HinamoreCh4n <motherrussia711@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.22.3"
rand = "0.7.2"
dyn-clone = "1.0.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
noise = "0.6.0"
clap = "2.33.0"
src = "0.0.5"

[profile.release]
codegen-units = 1
opt-level = 3
